# app/Http/Controllers/Api/orderlineController.php
@@ -14,9 +14,41 @@ class orderlineController extends Controller
     }
     
     public function index(){
-        $orderlines = orderline::get();
-        return $orderlines;
+        return orderlineResource::collection(orderline::get());
     }
+
+    /**
+         * @OA\Get(
+         * path="/api/orderline",
+         * summary="Gets all orderlines",
+         * description="Obtains all orderlines that are stored in the database",
+         * operationId="getOrderlines",
+         * tags={"orderlines"},
+         * 
+         * 
+         * @OA\Response(
+         *      response=200,
+         *      description="Success",
+         *      @OA\JsonContent(ref="#/components/schemas/orderline"),
+         * ),
+         * 
+         * @OA\Response(
+         *      response=403,
+         *      description="Forbidden",
+         * ),
+         * 
+         * @OA\Response(
+         *      response=401,
+         *      description="Unauthenticated",
+         *      @OA\JsonContent(
+         *          @OA\Property(
+         *              property="error",
+         *              type="string",
+         *              example="The user has not been authenticated"))
+         * ),
+         * 
+         * )
+         */
 
     public function store(Request $request){
         $orderline = new orderline();
@@ -35,9 +67,80 @@ class orderlineController extends Controller
         }
     }
 
+    /**
+         * @OA\Post(
+         * path="/api/orderline",
+         * summary="Add an orderline",
+         * description="Store a new orderline in the database",
+         * operationId="postOrderline",
+         * tags={"orderlines"},
+         * security={ { "apiAuth": {}  }},
+         * @OA\RequestBody(
+         *    required=true,
+         *    description="Posting an orderline",
+         *    @OA\JsonContent(ref="#/components/schemas/orderlineResource"),
+         * ),
+         * 
+         * @OA\Response(
+         *      response=201,
+         *      description="Success",
+         *      @OA\JsonContent(
+         *      @OA\Property(property="message",type="string",example="Success"),
+         *      ),
+         * ),
+         * 
+         * @OA\Response(
+         *      response=403,
+         *      description="Forbidden",
+         * ),
+         * 
+         * @OA\Response(
+         *      response=400,
+         *      description="Bad Request"
+         * ),
+         * 
+         * @OA\Response(
+         *      response=401,
+         *      description="Unauthenticated",
+         *      @OA\JsonContent(
+         *          @OA\Property(
+         *              property="error",
+         *              type="string",
+         *              example="The user has not been authenticated"))
+         * ),
+         * )
+         */
+
+
+
     public function show(orderline $orderline){
         return response()->json($orderline,200);
     }
+
+    /**
+         * @OA\Get(
+         * path="/api/orderline/{id}",
+         * summary="Show an orderline",
+         * description="Show an orderline stored in the database",
+         * operationId="showOrderline",
+         * tags={"orderlines"},
+         * @OA\RequestBody(
+         *    required=true,
+         *    description="Posting an orderline",
+         *    @OA\JsonContent(
+         *       required={"id"},
+         *       @OA\Property()
+         *    ),
+         * ),
+         * 
+         * @OA\Response(
+         *      response=201,
+         *      description="Success",
+         *      @OA\JsonContent(ref="#/components/schemas/orderlineResource")),
+         *      
+         * ),
+         * )
+        */
 
     public function update(Request $request, orderline $orderline){
         $orderline->order_id = $request->order_id;
@@ -55,10 +158,62 @@ class orderlineController extends Controller
         }
     }
 
+    /**
+         * @OA\Put(
+         * path="/api/orderline/{id}",
+         * summary="Edits an orderline",
+         * description="Overwrites an orderline stored in the database",
+         * operationId="updateOrderline",
+         * tags={"orderlines"},
+         * 
+         * 
+         * @OA\Response(
+         *      response=200,
+         *      description="Success",
+         *      @OA\JsonContent(ref="#/components/schemas/orderlineResource"),
+         * ),
+         * @OA\Response(
+         *      response=401,
+         *      description="Unauthenticated",
+         *      @OA\JsonContent(
+         *          @OA\Property(
+         *              property="error",
+         *              type="string",
+         *              example="The user has not been authenticated"))
+         * ),
+         * 
+         * )
+         */
+
 
     public function destroy(orderline $orderline)
     {
         $orderline->delete();
         return response()->json(null,204);
     }
+
+     /**
+         * @OA\Delete(
+         * path="/api/orderline/{id}",
+         * summary="Deletes an orderline",
+         * description="Deletes an orderline stored in the database",
+         * operationId="deletesOrderline",
+         * tags={"orderlines"},
+         * 
+         * 
+         * @OA\Response(
+         *      response=204,
+         *      description="Success",
+         * ),
+         * @OA\Response(
+         *      response=401,
+         *      description="Unauthenticated",
+         *      @OA\JsonContent(
+         *          @OA\Property(
+         *              property="error",
+         *              type="string",
+         *              example="The user has not been authenticated"))
+         * ),
+         * )
+         */
 }
